[package]
name = "mutself"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", default-features = false, features = ["parsing", "printing", "clone-impls", "proc-macro", "full", "extra-traits"] }
quote = { version = "1" }
proc-macro2 = "1"

[target.'cfg(windows)'.dependencies]
object = { version = "0.30", default-features = false, features = ["read_core", "write_std", "pe"] }

[target.'cfg(unix)'.dependencies]
object = { version = "0.30", default-features = false, features = ["read_core", "write_std", "elf"] }
