[package]
name = "mutself"
version = "0.2.0"
authors = ["Guillaume Anthouard <guillaume.anthouard@hotmail.fr>"]
edition = "2021"
rust-version = "1.61"
description = "Create self-modifying executables"
repository = "https://github.com/Gui-Yom/mutself"
license = "MIT"
keywords = ["executable", "linker", "static", "proc-macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", default-features = false, features = ["parsing", "printing", "clone-impls", "proc-macro", "full", "extra-traits"] }
quote = { version = "1" }
proc-macro2 = "1"

[target.'cfg(windows)'.dependencies]
object = { version = "0.31", default-features = false, features = ["read_core", "write_std", "pe"] }

[target.'cfg(unix)'.dependencies]
object = { version = "0.31", default-features = false, features = ["read_core", "write_std", "elf"] }
